@@ -14,7 +14,7 @@ module Hello
 {
   component Receiver
   {
-    port CCM_DDS::Hello::DDS_Listen info_out;
+    port HelloConn::DDS_Listen info_out;
     provides CCM_DDS::ConnectorStatusListener info_out_connector_status;
 
     attribute string name;
