@@ -16,7 +16,7 @@ module Hello
 {
   component Sender
   {
-    port CCM_DDS::Hello::DDS_Write info_in;
+    port HelloConn::DDS_Write info_in;
     attribute unsigned long rate;
     attribute unsigned long iterations;
     attribute string message;
