@@ -34,27 +34,28 @@ namespace CIAO_Hello_Sender_Impl
     virtual ~ConnectorStatusListener_exec_i (void);
 
     virtual
-    void on_inconsistent_topic( ::DDS::Topic_ptr the_topic, 
-                               const DDS::InconsistentTopicStatus & status);
+    void on_inconsistent_topic (::DDS::Topic_ptr the_topic,
+                                const DDS::InconsistentTopicStatus & status);
     virtual
-    void on_requested_incompatible_qos( ::DDS::DataReader_ptr the_reader,
-                                       const DDS::RequestedIncompatibleQosStatus & status);
+    void on_requested_incompatible_qos (::DDS::DataReader_ptr the_reader,
+                                        const DDS::RequestedIncompatibleQosStatus & status);
     virtual
-    void on_sample_rejected( ::DDS::DataReader_ptr the_reader, 
+    void on_sample_rejected (::DDS::DataReader_ptr the_reader,
                              const DDS::SampleRejectedStatus & status);
     virtual
-    void on_offered_deadline_missed( ::DDS::DataWriter_ptr the_writer,
+    void on_offered_deadline_missed (::DDS::DataWriter_ptr the_writer,
                                      const DDS::OfferedDeadlineMissedStatus & status);
     virtual
-    void on_offered_incompatible_qos( ::DDS::DataWriter_ptr the_writer, 
+    void on_offered_incompatible_qos (::DDS::DataWriter_ptr the_writer,
                                       const DDS::OfferedIncompatibleQosStatus & status);
     virtual
-    void on_unexpected_status( ::DDS::Entity_ptr the_entity,
-       ::DDS::StatusKind  status_kind);
+    void on_unexpected_status (::DDS::Entity_ptr the_entity,
+                               ::DDS::StatusKind  status_kind);
     private:
     Atomic_Boolean &ready_to_start_;
- 
+
   };
+
   class pulse_Generator : 
     public ACE_Event_Handler
   {
@@ -63,14 +64,12 @@ namespace CIAO_Hello_Sender_Impl
 
     ~pulse_Generator ();
 
-    /// Handle the timeout.
     virtual int handle_timeout (const ACE_Time_Value &tv,
                                 const void *arg);
   private:
-    /// Maintains a handle that actually process the event
     Sender_exec_i &pulse_callback_;
   };
-  
+
   class Sender_exec_i
     : public virtual Sender_Exec,
       public virtual ::CORBA::LocalObject
@@ -78,21 +77,21 @@ namespace CIAO_Hello_Sender_Impl
   public:
     Sender_exec_i (void);
     virtual ~Sender_exec_i (void);
-    
+
     // Supported operations and attributes.
-    
+
     // TAO_IDL - Generated from
     // be/be_visitor_operation/operation_ch.cpp:46
-    
+
     void start (void);
-    
+
     // TAO_IDL - Generated from
     // be/be_visitor_operation/operation_ch.cpp:46
-    
+
     void stop (void);
-    
+
     void tick ();
-    
+
     // Component attributes.
     virtual ::CORBA::ULong iterations (void);
 
@@ -107,41 +106,40 @@ namespace CIAO_Hello_Sender_Impl
     virtual void log_time (::CORBA::Boolean log_time);
 
     virtual ::CORBA::ULong rate (void);
-    
+
     virtual void rate (::CORBA::ULong rate);
 
-   
+
     // Operations from Components::SessionComponent.
-    
     virtual void
     set_session_context (
       ::Components::SessionContext_ptr ctx);
-    
+
     virtual void configuration_complete (void);
-    
+
     virtual void ccm_activate (void);
     virtual void ccm_passivate (void);
     virtual void ccm_remove (void);
 
     // Port operations.
     virtual ::CCM_DDS::CCM_ConnectorStatusListener_ptr
-      get_connector_status(void);
+    get_connector_status(void);
 
   private:
     ::Hello::CCM_Sender_Context_var context_;
-    CCM_DDS::Hello::Writer_var writer_;
+    Hello::HelloConn::Writer_var writer_;
     pulse_Generator * ticker_;
     CORBA::ULong rate_;
     CORBA::ULong iteration_, iterations_;
     CORBA::Boolean log_time_;
     ACE_CString msg_;
-    
+
     ACE_CString create_message (
           const ACE_CString &msg);
     Atomic_Boolean ready_to_start_;
 
   };
-  
+
   extern "C" HELLO_SENDER_EXEC_Export ::Components::EnterpriseComponent_ptr
   create_Hello_Sender_Impl (void);
 }
