@@ -1,3 +1,15 @@
+Tue Feb  9 13:27:37 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/examples/Hello/Connector/Hello_Connector.idl:
+        * connectors/dds4ccm/examples/Hello/Connector/Hello_Connector_exec.h:
+        * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver.idl:
+        * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver_exec.h:
+        * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver_exec.cpp:
+        * connectors/dds4ccm/examples/Hello/Sender/Hello_Sender.idl:
+        * connectors/dds4ccm/examples/Hello/Sender/Hello_Sender_exec.h:
+          Moved typed module Hello to Hello namespace (instead of leaving
+          it in the CCM_DDS namespace).
+
 Tue Feb  9 13:25:17 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ciao/Valuetype_Factories/Cookies.h:
